part1/exercise-112-Project-v0.6/backend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: todo-backend-ingress
  namespace: todo
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: todo-backend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
